--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2021"
 
 [dependencies]
 actix = "0.13.3"
+actix-web = "4.6.0"
 deadpool-postgres = "0.13.2"
+serde_json = "1.0.117"
 url = "2.5.0"
+serde = { version = "1.0.202", features = ["derive"] }
