--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 actix = "0.13.3"
 actix-web = "4.6.0"
 deadpool-postgres = { version = "0.13.2", features = ["serde", "default"] }
-postgres-types = { version = "0.2.6", features = ["chrono-04", "with-chrono-0_4"] }
+postgres-types = { version = "0.2.6", features = ["chrono-04", "with-chrono-0_4", "uuid-1", "with-uuid-1"] }
 serde_json = "1.0.117"
 url = "2.5.0"
 serde = { version = "1.0.202", features = ["derive"] }
